kuard-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard-deployment
  labels:
    app: kuard-pod
  annotations:
    kubernetes.io/change-cause: "Update to x.y.z"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuard-pod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: kuard-pod
    spec:
      containers:
        - image: jmutai/kuard-amd64:blue
          name: kuard-container
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
              requests:
                cpu: "500m"
                memory: "256Mi"
              limits:
                cpu: "1000m"
                memory: "500Mi"
          livenessProbe:
            httpGet:
              path: /healthy
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 2
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
