postgres-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres # При создании каждого Pod ему назначается DNS-поддомен вида $(podname).$(spec.serviceName)
  replicas: 2
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
              name: postgres
          livenessProbe:
            exec:
              command:
                - bash
                - -c
                - |
                  pg_isready -h postgres-0 -p 5432 || exit 1
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            exec:
              command:
                - bash
                - -c
                - |
                  pg_isready -h postgres-0 -p 5432 &&
                  psql -U "$POSTGRES_USER" -d "$POSTGRES_DB" -c "SELECT 1" -t >/dev/null 2>&1
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: hostpath
