snowflakes-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snowflakes-deployment
  labels:
    app: snowflakes-pod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: snowflakes-pod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: snowflakes-pod
    spec:
      volumes:
        - name: env-config
          emptyDir: { }
      containers:
        - image: snowflakes:1.5
          name: snowflakes-container
          command: [ "sh", "-c" ]
          args:
            - . /env/worker.env;
              export WORKED_ID;
              exec java -jar app.jar
          volumeMounts:
            - name: env-config
              mountPath: /env
              readOnly: true
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /management/health/livenessState
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 2
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /management/health/readinessState
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
