kuard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kuard-service
spec:
  type: NodePort
  selector:
    app: kuard-pod
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
