snowflakes-service.yml
apiVersion: v1
kind: Service
metadata:
  name: snowflakes-service
spec:
  type: NodePort
  selector:
    app: snowflakes-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
